# english-scorer

./: DESIGN.md  PROFESSOR_RECOMMENDATIONS.md  README.md
backend/: pyproject.toml
backend/app/: main.py  models.py  rate_limiter.py
backend/app/scoring/: engine.py  feedback.py  language_detection.py
backend/app/scoring/analyzers/: base.py  coherence.py  fluency.py  grammar.py  sentence.py  spelling.py  vocabulary.py
backend/tests/: test_api.py  test_feedback.py  test_feedback_enhanced.py  test_models.py  test_scoring_engine.py
backend/tests/scoring/: fixtures.py  test_coherence_analyzer.py  test_diagnostics.py  test_engine_integration.py  test_fluency_analyzer.py  test_grammar_analyzer.py  test_sentence_analyzer.py  test_spelling_analyzer.py  test_vocabulary_analyzer.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: scorer.js
frontend/src/components/: ErrorMessage.jsx  ExampleButtons.jsx  FeedbackPanel.jsx  LoadingSpinner.jsx  OverallScore.jsx  ScoreBreakdown.jsx  SubmitButton.jsx  TextInput.jsx
frontend/src/test/: App.test.jsx  ErrorMessage.test.jsx  ExampleButtons.test.jsx  FeedbackPanel.test.jsx  LoadingSpinner.test.jsx  OverallScore.test.jsx  ScoreBreakdown.test.jsx  SubmitButton.test.jsx  TextInput.test.jsx  exportPdf.test.js  scorer.test.js
frontend/src/utils/: exportPdf.js
scripts/: critique_agent.py
